# triplet_taste

./: .gitignore  LICENSE  README.md  create_embeddings.py  inference.py  pyproject.toml  train.py  triplet_learning_demo.ipynb
logs/: triplet_taste_20250807_201729_metrics.json
logs/checkpoints/: epoch=01-val-accuracy=0.0000.ckpt  epoch=02-val-accuracy=0.0000.ckpt  epoch=03-val-accuracy=0.0000.ckpt  last.ckpt
logs/csv_logs/triplet_taste_20250807_201729/: hparams.yaml  metrics.csv
src/data/: __init__.py  create_splits.py  extract_clip_embeddings.py  food_datamodule.py
src/data/embeddings/: X_test_clip.pt  X_train_clip.pt  X_val_clip.pt  metadata_clip_split.pt
src/data/splits/: train_triplets_clean.txt  val_triplets_clean.txt
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  triplet_model.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  notebook_utils.py
